css/block/ucb-article-feature-block.css
.ucb-article-feature-block-button-container {
  text-align: center;
}

.ucb-article-feature-block-button {
  display: inline-block;
  padding: 5px 10px;
  font-weight: bold;
  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin-bottom: 5px;
  background-clip: padding-box;
  color: inherit;
  border: 1px solid currentColor;
  text-decoration: none;
  border-radius: 0px;
  background-color: transparent;
}

.ucb-article-feature-block-button:hover {
  text-decoration: none;
}

.ucb-article-img-link {
  width: 80px !important;
  height: 80px !important;
  padding: 0;
}

.ucb-article-feature-container .ucb-article-card {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.ucb-inline-large-feature-container,
.ucb-inline-half-feature-container {
  padding-right: 20px;
}
.ucb-inline-large-secondary-container,
.ucb-inline-half-secondary-container {
  padding-left: 20px;
}

.ucb-article-read-more {
  text-transform: uppercase;
  font-weight: 600;
  font-size: 75%;
}

.ucb-article-card {
  margin-bottom: 10px;
  border-bottom: solid 1px rgba(128, 128, 128, 0.333);
  padding-bottom: 10px;
}

.ucb-stacked-secondary-container {
    margin: 0 24px;
    margin-bottom: 20px;
    padding-top: 20px;
    border-top: solid 1px rgba(128, 128, 128, 0.333);
    border-bottom: solid 1px rgba(128, 128, 128, 0.333);
    padding-bottom: 10px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.ucb-stacked-primary-container {
  margin-bottom: 20px;
}

.ucb-article-feature-secondary-title {
  font-size: 110%;
  font-weight: normal;
  margin: 0;
  line-height: 1.3;
  flex-shrink: 1;
}

.ucb-feature-article-summary {
  margin-bottom: 0;
}

.ucb-feature-article-img {
  margin-bottom: 10px;
}

.feature-img-square {
  object-fit: cover !important;
  max-height: 500px !important;
  height: auto;
  aspect-ratio: 3/2;
  max-width: 100%;
}

.feature-img-wide{
  aspect-ratio: 16 / 9;
  object-fit: cover;
}

.ucb-stacked-secondary-container > .ucb-article-card {
  margin-bottom: 0px;
  border-bottom: none;
  padding: 0px;
}

.ucb-article-feature-container .ucb-article-img-link{
  margin-right: 10px;
}

@media screen and (max-width: 767px) {
  .ucb-stacked-secondary-container > .ucb-article-card {
    margin-bottom: 10px;
    border-bottom: solid 1px rgba(128, 128, 128, 0.333);
    padding-bottom: 10px;
    padding-top: 10px;
  }
  .ucb-stacked-secondary-container > .ucb-article-card:first-child {
    border-top: solid 1px rgba(128, 128, 128, 0.333);
    padding-top: 10px;
  }

  .ucb-stacked-secondary-container {
    margin-top: 10px;
    margin-left: 0;
    margin-right: 0;
    border-top: none;
    border-bottom: none;
    padding-bottom: 10px;
  }

  .ucb-inline-half-feature-container,
  .ucb-inline-large-feature-container {
    margin-bottom: 20px;
    padding-bottom: 20px;
  }
}

